# cafe-pickup-hub

./: .gitignore  README.md  main.py  requirements.txt  vercel.json
backend/: README.md  pyproject.toml
backend/src/cafe_pickup_hub/: main.py  models.py  sample_data.py
backend/src/cafe_pickup_hub/api/: __init__.py  legacy.py
backend/src/cafe_pickup_hub/api/v1/: __init__.py  router.py
backend/src/cafe_pickup_hub/api/v1/routes/: __init__.py  admin_trust.py  health.py  host_operations.py  hubs.py  pickup_authorizations.py  pickup_requests.py
backend/src/cafe_pickup_hub/domain/: __init__.py  errors.py  models.py  transitions.py
backend/src/cafe_pickup_hub/schemas/: __init__.py  v1.py
backend/src/cafe_pickup_hub/services/: __init__.py  admin_trust.py  catalog.py  host_operations.py  pickup_authorizations.py  pickup_requests.py  repository.py  sample_data.py
backend/tests/: test_api.py  test_phase3_api.py  test_phase3_transitions.py  test_phase5_pickup_create.py  test_phase6_host_operations.py  test_phase7_friend_authorizations.py  test_phase7b_admin_trust.py
docs/architecture/: domain-model.md
docs/product/: phase-1-product-structure.md  user-flows.md
docs/roadmap/: enterprise-roadmap.md
frontend/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  hero.css  host-operations.css  layout.tsx  page.tsx  responsive.css  sections.css  uiux-admin.css  uiux-booking.css  uiux-dashboard.css  uiux-flow.css  uiux-mobile.css  uiux-permission.css  uiux-phase2.css  uiux-shared.css
frontend/lib/: api-client.ts  (+16 more)
(+23 files in other folders)
